Update navigation: Set landing page as default and add consistent Home links

--- a/map.html
+++ b/map.html
@@ -24,7 +24,7 @@
         <a href="map.html" class="active">Map</a>
         <a href="statistics.html">Statistics</a>
         <a href="specs.html">Specs</a>
-        <a href="index.html">Home</a>
+        <a href="landing.html">Home</a>
     </div>
     <div id="map"></div>
 
