--- a/statistics.html
+++ b/statistics.html
@@ -42,6 +42,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="specs.html">Specs</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="landing.html">Home</a>
+                    </li>
                 </ul>
                 <div class="ms-auto">
                     <button id="theme-toggle" class="btn btn-outline-light">
