--- a/specs.html
+++ b/specs.html
@@ -39,6 +39,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="specs.html">Specs</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="landing.html">Home</a>
+                    </li>
                 </ul>
                 <div class="ms-auto">
                     <button id="theme-toggle" class="btn btn-outline-light">
